--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -29,7 +29,6 @@ config("phonenumber_config") {
     "-Dphonenumber_shared_EXPORTS",
     "-Wall",
     "-fPIC",
-    "-frtti",
     "-U__ANDROID__",
     "-Wno-sign-compare",
     "-Wno-error=unused-parameter",
@@ -66,15 +65,12 @@ phonenumber_source = [
 ]
 
 ohos_shared_library("phonenumber_standard") {
-  configs = [
-    ":phonenumber_config",
-    "//build/config/compiler:rtti",
-  ]
+  configs = [ ":phonenumber_config" ]
   sources = phonenumber_source
   deps = [
     "//third_party/icu/icu4c:shared_icui18n",
     "//third_party/icu/icu4c:shared_icuuc",
-    "//third_party/protobuf/src:protobuf_standard",
+    "//third_party/protobuf:protobuf_lite",
   ]
   defines = [
     "I18N_PHONENUMBERS_USE_ALTERNATE_FORMATS",
@@ -83,7 +79,6 @@ ohos_shared_library("phonenumber_standard") {
   ]
   part_name = "libphonenumber"
   subsystem_name = "thirdparty"
-  remove_configs = [ "//build/config/compiler:no_rtti" ]
   ldflags = [ "-shared" ]
   install_enable = true
 }
