--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -61,11 +61,7 @@ phonenumber_source = [
   "src/phonenumbers/logger.cc",
   "src/phonenumbers/stringutil.cc",
   "src/phonenumbers/unicodestring.cc",
-  "src/phonenumbers/utf/rune.c",
-  "src/phonenumbers/geocoding/area_code_map.cc",
-  "src/phonenumbers/geocoding/default_map_storage.cc",
-  "src/phonenumbers/geocoding/mapping_file_provider.cc",
-  "src/phonenumbers/geocoding/phonenumber_offline_geocoder.cc",
+  "src/phonenumbers/utf/rune.c"
 ]
 
 ohos_shared_library("phonenumber_standard") {
