--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -21,6 +21,7 @@ group("build_module") {
 }
 config("phonenumber_config") {
   include_dirs = [
+    "//third_party/abseil-cpp/absl",
     "//third_party/icu/icu4c/source/common",
     "//third_party/icu/icu4c/source/i18n",
     "//third_party/icu/icu4c/source",
@@ -75,6 +76,8 @@ ohos_shared_library("phonenumber_standard") {
   configs = [ ":phonenumber_config" ]
   sources = phonenumber_source
   deps = [
+    "//third_party/abseil-cpp/absl:absl_strings",
+    "//third_party/abseil-cpp/absl:absl_base",
     "//third_party/icu/icu4c:shared_icui18n",
     "//third_party/icu/icu4c:shared_icuuc",
     "//third_party/protobuf:protobuf_lite",
