Ignore warnings for llvm15 Issue: #I6ID6E
Signed-off-by: guzhihao4 <guzhihao4@huawei.com>
Change-Id: I489de54782f042a7b6cb82c20b9cbd6050fee12a

--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -43,6 +43,7 @@ config("phonenumber_config") {
     "-Wno-error=unused-const-variable",
     "-Wno-error=unneeded-internal-declaration",
     "-Wno-implicit-fallthrough",
+    "-Wno-deprecated-builtins",
   ]
 }
 
