--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -12,6 +12,7 @@
 # limitations under the License.
 
 import("//build/ohos.gni")
+import("//third_party/abseil-cpp/configure_copts.gni")
 
 group("build_module") {
   deps = [
@@ -21,7 +22,7 @@ group("build_module") {
 }
 config("phonenumber_config") {
   include_dirs = [
-    "//third_party/abseil-cpp/abseil-cpp-20220623.1",
+    "${ABSEIL_DIR}",
     "//third_party/icu/icu4c/source/common",
     "//third_party/icu/icu4c/source/i18n",
     "//third_party/icu/icu4c/source",
