--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -12,7 +12,6 @@
 # limitations under the License.
 
 import("//build/ohos.gni")
-import("//third_party/abseil-cpp/configure_copts.gni")
 
 group("build_module") {
   deps = [
@@ -22,7 +21,7 @@ group("build_module") {
 }
 config("phonenumber_config") {
   include_dirs = [
-    "${ABSEIL_DIR}",
+    "//third_party/abseil-cpp/abseil-cpp",
     "//third_party/icu/icu4c/source/common",
     "//third_party/icu/icu4c/source/i18n",
     "//third_party/icu/icu4c/source",
