--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -66,6 +66,10 @@ phonenumber_source = [
   "src/phonenumbers/phonenumber.pb.cc",
   "src/phonenumbers/base/strings/string_piece.cc",
   "src/phonenumbers/alternate_format.cc",
+  "src/phonenumbers/ohos/geocoding_data.pb.cc",
+  "src/phonenumbers/ohos/update_geocoding.cc",
+  "src/phonenumbers/ohos/update_libphonenumber.cc",
+  "src/phonenumbers/ohos/update_metadata.cc",
   "src/phonenumbers/shortnumberinfo.cc",
   "src/phonenumbers/utf/unilib.cc",
   "src/phonenumbers/utf/unicodetext.cc",
@@ -83,6 +87,7 @@ ohos_shared_library("phonenumber_standard") {
   public_configs = [ ":phonenumber_public_config" ]
   sources = phonenumber_source
   deps = [
+    ":version_txt",
     "//third_party/abseil-cpp:absl_base",
     "//third_party/abseil-cpp:absl_strings",
     "//third_party/bounds_checking_function:libsec_shared",
@@ -128,4 +133,11 @@ ohos_shared_library("geocoding") {
   subsystem_name = "thirdparty"
   ldflags = [ "-shared" ]
   install_enable = true
+}
+
+ohos_prebuilt_etc("version_txt") {
+  source = "./src/phonenumbers/ohos/etc/version.txt"
+  module_install_dir = "etc/LIBPHONENUMBER/generic/"
+  part_name = "libphonenumber"
+  subsystem_name = "thirdparty"
 }
