依赖目录加入修改cpp/BUILD，依赖目录加入src/phonenumbers
Signed-off-by: tongkai0808fh <tongkai5@huawei.com>

--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -48,7 +48,10 @@ config("phonenumber_config") {
 }
 
 config("phonenumber_public_config") {
-  include_dirs = [ "//third_party/libphonenumber/cpp/src" ]
+  include_dirs = [ 
+      "//third_party/libphonenumber/cpp/src",
+      "//third_party/libphonenumber/cpp/src/phonenumbers"
+  ]
 }
 
 phonenumber_source = [
