fuzz编译报错问题
Signed-off-by: zhangdd_ewan <zhangdongdong50@huawei.com>

--- a/cpp/test/BUILD.gn
+++ b/cpp/test/BUILD.gn
@@ -100,4 +100,8 @@ ohos_unittest("libphonenumber_test") {
     "//third_party/icu/icu4c:shared_icuuc",
     "//third_party/protobuf:protobuf_lite",
   ]
+
+  external_deps = [
+    "abseil-cpp:absl_strings",
+  ]
 }
