fuzz编译报错问题
Signed-off-by: zhangdd_ewan <zhangdongdong50@huawei.com>

--- a/cpp/test/BUILD.gn
+++ b/cpp/test/BUILD.gn
@@ -59,9 +59,7 @@ ohos_unittest("libphonenumber_test") {
     "HAVE_PTHREAD",
   ]
 
-  deps = [
-    "//third_party/libphonenumber/cpp:phonenumber_standard",
-  ]
+  deps = [ "//third_party/libphonenumber/cpp:phonenumber_standard" ]
   external_deps = [
     "googletest:gtest",
     "icu:shared_icui18n",
