部件化编译
Signed-off-by: zhangdd_ewan <zhangdongdong50@huawei.com>

--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -139,9 +139,7 @@ ohos_shared_library("geocoding") {
     "src/phonenumbers/geocoding/phonenumber_offline_geocoder.cc",
     "src/phonenumbers/phonenumber.pb.h",
   ]
-  deps = [
-    "//third_party/libphonenumber/cpp:phonenumber_standard",
-  ]
+  deps = [ "//third_party/libphonenumber/cpp:phonenumber_standard" ]
   external_deps = [
     "bounds_checking_function:libsec_shared",
     "icu:shared_icuuc",
