--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -22,7 +22,14 @@ group("build_module") {
 config("phonenumber_config") {
   include_dirs = [
     "//third_party/abseil-cpp/abseil-cpp",
+    "//third_party/bounds_checking_function/include",
+    "//third_party/icu/icu4c/source/common",
+    "//third_party/icu/icu4c/source/i18n",
+    "//third_party/icu/icu4c/source",
     "//third_party/libphonenumber/cpp/src",
+    "//third_party/protobuf/src",
+    "//third_party/protobuf/src/google",
+    "//third_party/protobuf/src/google/protobuf",
   ]
   cflags = [ "-Wno-implicit-fallthrough" ]
   cflags_cc = [
@@ -73,7 +80,13 @@ phonenumber_source = [
   "src/phonenumbers/utf/rune.c",
 ]
 
-phonenumber_deps = []
+phonenumber_deps = [
+  "//third_party/abseil-cpp:absl_base",
+  "//third_party/abseil-cpp:absl_strings",
+  "//third_party/bounds_checking_function:libsec_shared",
+  "//third_party/icu/icu4c:shared_icui18n",
+  "//third_party/icu/icu4c:shared_icuuc",
+]
 
 phonenumber_defines = [
   "I18N_PHONENUMBERS_USE_ALTERNATE_FORMATS",
@@ -116,13 +129,6 @@ ohos_shared_library("phonenumber_standard") {
   sources = phonenumber_source
   deps = phonenumber_deps
   public_external_deps = [ "protobuf:protobuf_lite" ]
-  external_deps = [
-    "abseil-cpp:absl_strings",
-    "abseil-cpp:absl_time",
-    "bounds_checking_function:libsec_shared",
-    "icu:shared_icui18n",
-    "icu:shared_icuuc",
-  ]
   defines = phonenumber_defines
   innerapi_tags = [ "platformsdk_indirect" ]
   part_name = "libphonenumber"
@@ -142,10 +148,10 @@ ohos_shared_library("geocoding") {
     "src/phonenumbers/geocoding/phonenumber_offline_geocoder.cc",
     "src/phonenumbers/phonenumber.pb.h",
   ]
-  deps = [ "//third_party/libphonenumber/cpp:phonenumber_standard" ]
-  external_deps = [
-    "bounds_checking_function:libsec_shared",
-    "icu:shared_icuuc",
+  deps = [
+    "//third_party/bounds_checking_function:libsec_shared",
+    "//third_party/icu/icu4c:shared_icuuc",
+    "//third_party/libphonenumber/cpp:phonenumber_standard",
   ]
   defines = geocoding_defines
   part_name = "libphonenumber"
