--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -21,15 +21,7 @@ group("build_module") {
 }
 config("phonenumber_config") {
   include_dirs = [
-    "//third_party/abseil-cpp/abseil-cpp",
-    "//third_party/bounds_checking_function/include",
-    "//third_party/icu/icu4c/source/common",
-    "//third_party/icu/icu4c/source/i18n",
-    "//third_party/icu/icu4c/source",
     "//third_party/libphonenumber/cpp/src",
-    "//third_party/protobuf/src",
-    "//third_party/protobuf/src/google",
-    "//third_party/protobuf/src/google/protobuf",
   ]
   cflags = [ "-Wno-implicit-fallthrough" ]
   cflags_cc = [
@@ -80,13 +72,7 @@ phonenumber_source = [
   "src/phonenumbers/utf/rune.c",
 ]
 
-phonenumber_deps = [
-  "//third_party/abseil-cpp:absl_base",
-  "//third_party/abseil-cpp:absl_strings",
-  "//third_party/bounds_checking_function:libsec_shared",
-  "//third_party/icu/icu4c:shared_icui18n",
-  "//third_party/icu/icu4c:shared_icuuc",
-]
+phonenumber_deps = []
 
 phonenumber_defines = [
   "I18N_PHONENUMBERS_USE_ALTERNATE_FORMATS",
@@ -129,6 +115,13 @@ ohos_shared_library("phonenumber_standard") {
   sources = phonenumber_source
   deps = phonenumber_deps
   public_external_deps = [ "protobuf:protobuf_lite" ]
+  external_deps = [
+    "abseil-cpp:absl_base",
+    "abseil-cpp:absl_strings",
+    "bounds_checking_function:libsec_shared",
+    "icu:shared_icui18n",
+    "icu:shared_icuuc",
+  ]
   defines = phonenumber_defines
   innerapi_tags = [ "platformsdk_indirect" ]
   part_name = "libphonenumber"
@@ -149,9 +142,11 @@ ohos_shared_library("geocoding") {
     "src/phonenumbers/phonenumber.pb.h",
   ]
   deps = [
-    "//third_party/bounds_checking_function:libsec_shared",
-    "//third_party/icu/icu4c:shared_icuuc",
     "//third_party/libphonenumber/cpp:phonenumber_standard",
+  ]
+  external_deps = [
+    "bounds_checking_function:libsec_shared",
+    "icu:shared_icuuc",
   ]
   defines = geocoding_defines
   part_name = "libphonenumber"
