--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -20,7 +20,7 @@ group("build_module") {
   ]
 }
 config("phonenumber_config") {
-  include_dirs = [ "//third_party/libphonenumber/cpp/src" ]
+  include_dirs = [ "./src" ]
   cflags = [ "-Wno-implicit-fallthrough" ]
   cflags_cc = [
     "-DI18N_PHONENUMBERS_USE_ALTERNATE_FORMATS",
