libphonenumber独立编译整改
Signed-off-by: zhangdd_ewan <zhangdongdong50@huawei.com>

--- a/cpp/BUILD.gn
+++ b/cpp/BUILD.gn
@@ -115,7 +115,7 @@ ohos_shared_library("phonenumber_standard") {
   public_external_deps = [
     "abseil-cpp:absl_strings",
     "abseil-cpp:absl_time",
-    "protobuf:protobuf_lite"
+    "protobuf:protobuf_lite",
   ]
   external_deps = [
     "bounds_checking_function:libsec_shared",
